feat: add left text of section container

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Teko:wght@300..700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Teko:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 header{
     display: flex;
     flex-direction: row;
@@ -50,10 +51,39 @@ header{
 section{
     display: flex;
     flex-direction: row;
+    background-color: #181012;
 }
 
-.section_main_text{
+.section_container_text{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    gap: 20px;
+}
+
+.section_main_text{
+    font-size: 40px;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    color: #FFFFFF;
+}
+
+.section_subtitle{
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+    color: #A45A49;
+}
+
+.section_about_text{
+    font-size: 20px;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight:300;
+    font-style: normal;
+    letter-spacing: 1px;
+    color: #C7BAB3;
 }
