--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Teko:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Teko:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 header{
     display: flex;
     flex-direction: row;
@@ -50,20 +52,22 @@ header{
     opacity: 50%;
 }   
 
+.section_englober{
+    background-color: #181012;
+
+}
 section{
     display: flex;
-    max-width: 1120px;
-    height: 60vh;
     flex-direction: row;
     justify-content: space-between;
     background-color: #181012;
-    padding: 0rem 14rem;
+    padding: 0rem 22rem;
 }
 
 .section_container_text{
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 20px;
 }
 
@@ -109,7 +113,119 @@ section{
 }
 
 article{
-    background-color: #23181A;
+    padding-top: 25px;
+    background-color: #1f1517;
     position: relative; /* Necessário para o z-index */
     z-index: 5; /* Mesmo valor ou maior que o section */
+    padding: 0rem 22rem;
+
+}
+
+.article_introduction{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 5px;
+}
+
+.article_introduction > h2{
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 540;
+    font-style: normal;
+    color: #FFFFFF;
+}
+
+.article_introduction > h5 {
+    font-size: 15px !important
+}
+
+.coments_section{
+    display: flex;
+    flex-wrap: wrap; /* Permite que as divs quebrem para a próxima linha */
+    gap: 20px; /* Adiciona um espaço entre as divs */
+}
+
+.people_coments_container{
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+    height: 186px;
+    gap: 30px;
+    border-radius: 8px;
+    margin-top: 30px;
+    background-color: #241a1c;
+    padding: 14px;
+
+}
+
+.people_coments_container > h6 {
+    font-size: 13px;
+    font-family: "Epilogue", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+    color: #E7A80E;
+}
+
+.people_coments_container > p{
+    font-size: 18px;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight:300;
+    font-style: normal;
+    color: #C7BAB3;
+}
+
+.product_score{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.product_score > h3{
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 540;
+    font-style: normal;
+    color: #FFFFFF;
+    letter-spacing: -2%;
+    font-size: 25px;
+}
+
+.product_score > h4{
+    font-size: 16px;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight:300;
+    font-style: normal;
+    color: #756A67;
+}
+
+.user_infos{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 8px;
+}
+
+.user_infos > p{
+    font-size: 16px;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight:300;
+    font-style: normal;
+    color: #C7BAB3;
+}
+
+.more_examples{
+    margin-top: 32px;
+    text-align: center;
+    color: #C7BAB3;
+    font-size: 20px;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight:300;
+    font-style: normal;
 }
